--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -53,3 +53,13 @@ typeMismatch.java.lang.Long=Property {0} must be a valid number
 typeMismatch.java.lang.Short=Property {0} must be a valid number
 typeMismatch.java.math.BigDecimal=Property {0} must be a valid number
 typeMismatch.java.math.BigInteger=Property {0} must be a valid number
+
+app.title=Newsletter with Grails and AngularJS
+
+customer.label=Customer
+customer.mailto.label=mailto
+customer.lastname.label=Lastname
+customer.firstname.label=Firstname
+customer.address.label=Address
+customer.email.label=Email
+customer.phone.label=Phone
