--- a/grails-app/i18n/messages_de.properties
+++ b/grails-app/i18n/messages_de.properties
@@ -53,3 +53,13 @@ typeMismatch.java.lang.Long=Die Eigenschaft {0} muss eine gültige Zahl sein
 typeMismatch.java.lang.Short=Die Eigenschaft {0} muss eine gültige Zahl sein
 typeMismatch.java.math.BigDecimal=Die Eigenschaft {0} muss eine gültige Zahl sein
 typeMismatch.java.math.BigInteger=Die Eigenschaft {0} muss eine gültige Zahl sein
+
+app.title=Newsletter with Grails and AngularJS
+
+customer.label=Kunde
+customer.mailto.label=mailto
+customer.lastname.label=Nachname
+customer.firstname.label=Vorname
+customer.address.label=Adresse
+customer.email.label=Email
+customer.phone.label=Telefon
