Added user-directive, -controller, -resource.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -57,7 +57,7 @@ typeMismatch.java.math.BigInteger=Property {0} must be a valid number
 app.title=Newsletter with Grails and AngularJS
 
 customer.label=Customer
-customer.mailto.label=mailto
+customer.mailto.label=Mailto
 customer.lastname.label=Lastname
 customer.firstname.label=Firstname
 customer.address.label=Address
