--- a/grails-app/i18n/messages_de.properties
+++ b/grails-app/i18n/messages_de.properties
@@ -57,7 +57,7 @@ typeMismatch.java.math.BigInteger=Die Eigenschaft {0} muss eine gültige Zahl se
 app.title=Newsletter with Grails and AngularJS
 
 customer.label=Kunde
-customer.mailto.label=mailto
+customer.mailto.label=Mailto
 customer.lastname.label=Nachname
 customer.firstname.label=Vorname
 customer.address.label=Adresse
