--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -56,6 +56,8 @@ typeMismatch.java.math.BigInteger=Property {0} must be a valid number
 
 app.title=Newsletter with Grails and AngularJS
 
+customer.list.title = Kundenliste
+
 customer.label=Customer
 customer.mailto.label=Mailto
 customer.lastname.label=Lastname
