suit up for presentation

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -54,7 +54,7 @@ typeMismatch.java.lang.Short=Property {0} must be a valid number
 typeMismatch.java.math.BigDecimal=Property {0} must be a valid number
 typeMismatch.java.math.BigInteger=Property {0} must be a valid number
 
-app.title=Newsletter with Grails and AngularJS
+app.title=Mailing with Grails and AngularJS
 
 customer.list.title = Select Recipients
 
