--- a/grails-app/i18n/messages_de.properties
+++ b/grails-app/i18n/messages_de.properties
@@ -54,7 +54,7 @@ typeMismatch.java.lang.Short=Die Eigenschaft {0} muss eine gültige Zahl sein
 typeMismatch.java.math.BigDecimal=Die Eigenschaft {0} muss eine gültige Zahl sein
 typeMismatch.java.math.BigInteger=Die Eigenschaft {0} muss eine gültige Zahl sein
 
-app.title=Newsletter with Grails and AngularJS
+app.title=Mailing with Grails and AngularJS
 
 customer.label=Kunde
 customer.mailto.label=Mailto
